--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                   <div class="border-2 rounded-lg p-4 flex flex-col max-w-md w-full">
                     <img src="./assets/project1.png" alt="College Management System"
                       class="h-48 md:h-56 w-full object-cover rounded">
-                    <a href="#"
+                    <a href="https://meshdroid.com/Mtcollege/home.php"
                       class="mt-4 text-center font-bold text-lg md:text-xl hover:text-gray-600 transition">
                       College Management System
                     </a>
@@ -266,7 +266,7 @@
                   <div class="border-2 rounded-lg p-4 flex flex-col max-w-md w-full">
                     <img src="./assets/project2.png" alt="Portfolio Website"
                       class="h-48 md:h-56 w-full object-cover rounded">
-                    <a href="#"
+                    <a href="https://harshil-portfolio-2.netlify.app/"
                       class="mt-4 text-center font-bold text-lg md:text-xl hover:text-gray-600 transition">
                       Portfolio Website
                     </a>
